# Tex

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
tex/: __init__.py  config.py  main.py
tex/core/: dispatcher.py  executor.py  logger.py  validator.py
tex/llm/: client.py  prompts.py
tex/tools/: file_ops.py  network.py  packages.py  processes.py  registry.py  services.py  sysinfo.py
